src/test/deca/syntax/invalid/obtained_res/invalidLValuesynt.res
./src/test/deca/syntax/invalid/created/testAssign/invalidLValue.deca:9:4: left-hand side of assignment is not an lvalue
